completed css w/ updated game image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div id="game">
-        <img src="../../../Desktop/Tomagotchi Images/happy bot.jpg" class="game-image">
+        <img src="Tomagotchi Images/happy bot.jpg" class="game-image">
       </div>
 
       <div class="decor">
