--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </head>
   <body>
     <header>
-      <h1>Tomagotchi World</h1>
+      <h1>Toma-Botchi World</h1>
     </header>
 
     <hr style="color:lemonchiffon">
 
     <form id="form">
-      <input type="text" id="new-name" value="Enter pet name here"/>
+      <input type="text" id="new-name" value="LeBot James"/>
       <input type="submit" id="char-name" value="Submit" onclick="hideForm()"/>
     </form>
 
